# llm-security-proxy

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  logging.py  main.py  proxy.py
app/detectors/: base.py  patterns.py  pii.py  prompt_injection.py  secrets.py  tool_allowlist.py
app/models/: events.py
app/policies/: default_policy.yaml  engine.py
examples/: langchain_example.py  llamaindex_example.py
tests/: test_detectors.py  test_policy_engine.py  test_proxy.py
